Fix 'or' entry.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@7020 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/locale/nb_NO/LC_MESSAGES/messages.po
+++ b/trac/locale/nb_NO/LC_MESSAGES/messages.po
@@ -562,7 +562,7 @@ msgstr "Subjekt"
 
 #: trac/admin/templates/admin_perms.html:16 trac/ticket/templates/query.html:64
 msgid "or"
-msgstr ""
+msgstr "eller"
 
 #: trac/admin/templates/admin_perms.html:16
 msgid "Group"
