Update Italian translation.
Submitted by: Lele Gaifax
See: #5489


git-svn-id: http://svn.edgewall.org/repos/trac/trunk@7029 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/THANKS
+++ b/THANKS
@@ -16,6 +16,7 @@
  * Daragh Fitzpatrick             Daragh@i2i-Tech.com
  * Justin Francis
  * Markus Fuchs                   
+ * Lele Gaifax
  * Eric Gillespie                 epg@netbsd.org
  * Daniel Kahn Gillmor
  * Matthew Good                   trac@matt-good.net
