--- a/trac/locale/fr_FR/LC_MESSAGES/messages.po
+++ b/trac/locale/fr_FR/LC_MESSAGES/messages.po
@@ -2,6 +2,7 @@
 # Copyright (C) 2007-2008 Edgewall Software
 # This file is distributed under the same license as the Trac project.
 # Emmanuel Blot <emmanuel.blot@free.fr>, 2007.
+# Christian Boos <cboos@neuf.fr>, 2008.
 #
 #, fuzzy
 msgid ""
@@ -42,7 +43,7 @@ msgstr "Fichier joint '%(filename)s' introuvable"
 
 #: trac/attachment.py:365
 msgid "Bad request"
-msgstr "Mauvaise requête"
+msgstr "Requête invalide"
 
 #: trac/attachment.py:382
 #, python-format
@@ -51,7 +52,7 @@ msgstr "Retour à %(parent)s"
 
 #: trac/attachment.py:474
 msgid " attached to "
-msgstr " attaché à"
+msgstr " attaché à "
 
 #: trac/attachment.py:513
 #, python-format
@@ -111,12 +112,12 @@ msgstr "Seules les base de données sqlite peuvent être sauvegardées"
 
 #: trac/env.py:483
 msgid "Database newer than Trac version"
-msgstr "La base de données est plus récente que la version de Trac"
+msgstr "La version de la base de données est plus récente que la version de Tracutilisée"
 
 #: trac/env.py:495
 #, python-format
 msgid "No upgrade module for version %(num)i (%(version)s.py)"
-msgstr "Pas de mise à jour module pour la version %(num)i (%(version)s.py)"
+msgstr "Pas de module de mise à jour pour la version %(num)i (%(version)s.py)"
 
 #: trac/env.py:540
 msgid ""
@@ -135,7 +136,7 @@ msgid ""
 msgstr ""
 "L'Environnement Trac a besoin d'être mis à jour.\n"
 "\n"
-"Lancer \"trac-admin %(path)s upgrade\""
+"Exécutez la commande: \"trac-admin %(path)s upgrade\""
 
 #: trac/notification.py:216
 #, python-format
@@ -151,7 +152,7 @@ msgid "TLS enabled but server does not support TLS"
 msgstr "TLS activé mais le serveur ne gère pas le TLS"
 
 #: trac/notification.py:390
-#, fuzzy
+#, 
 msgid "Ticket contains non-ASCII chars. Please change encoding setting"
 msgstr "Le ticket contient des caractères non-ASCII. Merci de changer l'encodage"
 
@@ -188,7 +189,7 @@ msgstr ""
 
 #: trac/admin/web_ui.py:66
 msgid "Admin"
-msgstr "Admin"
+msgstr "Admin."
 
 #: trac/admin/web_ui.py:67 trac/admin/templates/admin.html:16
 msgid "Administration"
@@ -196,11 +197,11 @@ msgstr "Administration"
 
 #: trac/admin/web_ui.py:83
 msgid "No administration panels available"
-msgstr "Les panneaux d'administration ne sont pas disponibles"
+msgstr "Les pages d'administration ne sont pas disponibles"
 
 #: trac/admin/web_ui.py:105
 msgid "Unknown administration panel"
-msgstr "Panneau d'administration inconnu"
+msgstr "Page d'administration inconnu"
 
 #: trac/admin/web_ui.py:180 trac/admin/web_ui.py:207 trac/admin/web_ui.py:296
 #: trac/admin/web_ui.py:373 trac/prefs/web_ui.py:89
@@ -322,16 +323,16 @@ msgstr "Projet"
 #: trac/admin/templates/admin_versions.html:21
 #: trac/admin/templates/admin_versions.html:56
 msgid "Name:"
-msgstr "Nom:"
+msgstr "Nom :"
 
 #: trac/admin/templates/admin_basics.html:24
 msgid "URL:"
-msgstr "URL:"
+msgstr "URL :"
 
 #: trac/admin/templates/admin_basics.html:29
 #: trac/ticket/templates/ticket.html:293
 msgid "Description:"
-msgstr "Description:"
+msgstr "Description :"
 
 #: trac/admin/templates/admin_basics.html:36
 #: trac/admin/templates/admin_components.html:99
@@ -354,11 +355,11 @@ msgstr "Gestion des Composants"
 
 #: trac/admin/templates/admin_components.html:18
 msgid "Owner:"
-msgstr "Propriétaire:"
+msgstr "Propriétaire :"
 
 #: trac/admin/templates/admin_components.html:35
 msgid "Modify Component:"
-msgstr "Modifier le Composant:"
+msgstr "Modifier le Composant :"
 
 #: trac/admin/templates/admin_components.html:42
 msgid ""
@@ -390,11 +391,11 @@ msgstr "Annuler"
 #: trac/admin/templates/admin_milestones.html:66
 #: trac/admin/templates/admin_versions.html:46
 msgid "Save"
-msgstr ""
+msgstr "Sauvegarder"
 
 #: trac/admin/templates/admin_components.html:64
 msgid "Add Component:"
-msgstr "Ajouter un Composant:"
+msgstr "Ajouter un Composant :"
 
 #: trac/admin/templates/admin_components.html:70
 #: trac/admin/templates/admin_enums.html:32
@@ -430,9 +431,9 @@ msgstr "Défaut"
 #: trac/admin/templates/admin_milestones.html:123
 #: trac/admin/templates/admin_perms.html:93
 #: trac/admin/templates/admin_versions.html:93
-#, fuzzy
+#, 
 msgid "Remove selected items"
-msgstr "Pas de version sélectionné"
+msgstr "Supprimer les éléments sélectionnés"
 
 #: trac/admin/templates/admin_components.html:101
 #: trac/admin/templates/admin_enums.html:71
@@ -474,15 +475,15 @@ msgstr "Configuration"
 
 #: trac/admin/templates/admin_logging.html:27
 msgid "Type:"
-msgstr "Type:"
+msgstr "Type :"
 
 #: trac/admin/templates/admin_logging.html:36
 msgid "Log level:"
-msgstr "Niveau du journal:"
+msgstr "Niveau du journal :"
 
 #: trac/admin/templates/admin_logging.html:44
 msgid "Log file:"
-msgstr "Fichier du journal:"
+msgstr "Fichier du journal :"
 
 #: trac/admin/templates/admin_logging.html:47
 msgid "If you specify a relative path, the log file will be stored inside the"
@@ -547,7 +548,7 @@ msgstr "Date limite"
 #: trac/ticket/templates/milestone_view.html:25
 #: trac/ticket/templates/roadmap.html:38
 msgid "Completed"
-msgstr "Livré"
+msgstr "Atteint le"
 
 #: trac/admin/templates/admin_perms.html:13
 msgid "Manage Permissions"
@@ -555,7 +556,7 @@ msgstr "Gestion des Permissions"
 
 #: trac/admin/templates/admin_perms.html:15
 msgid "Note that"
-msgstr "Note"
+msgstr "Notez que pour un"
 
 #: trac/admin/templates/admin_perms.html:16
 #: trac/admin/templates/admin_perms.html:75
@@ -572,7 +573,7 @@ msgstr "Groupe"
 
 #: trac/admin/templates/admin_perms.html:16
 msgid "names can't be all upper cased,"
-msgstr "les noms ne peuvent contenir que des majuscules"
+msgstr "les noms ne peuvent contenir que des majuscules, "
 
 #: trac/admin/templates/admin_perms.html:16
 msgid "as this is reserved for permission names."
@@ -580,7 +581,7 @@ msgstr "ce format étant réservé pour les noms des permissions."
 
 #: trac/admin/templates/admin_perms.html:24
 msgid "Grant Permission:"
-msgstr "Attribuer la Permission :"
+msgstr "Attribuer la permission :"
 
 #: trac/admin/templates/admin_perms.html:27
 #: trac/admin/templates/admin_perms.html:54
@@ -602,7 +603,7 @@ msgstr ""
 
 #: trac/admin/templates/admin_perms.html:51
 msgid "Add Subject to Group:"
-msgstr "Ajout d'un sujet à un Groupe : "
+msgstr "Ajout d'un sujet à un groupe : "
 
 #: trac/admin/templates/admin_perms.html:58
 msgid "Group:"
@@ -644,11 +645,11 @@ msgstr "Envoi d'une extension au format Python egg."
 
 #: trac/admin/templates/admin_plugins.html:37
 msgid "Install"
-msgstr ""
+msgstr "Installer"
 
 #: trac/admin/templates/admin_plugins.html:49
 msgid "Uninstall"
-msgstr ""
+msgstr "Désinstaller"
 
 #: trac/admin/templates/admin_plugins.html:59 trac/templates/diff_view.html:43
 #: trac/versioncontrol/templates/changeset.html:97
@@ -677,11 +678,11 @@ msgstr "Versions"
 
 #: trac/admin/templates/admin_versions.html:14
 msgid "Manage Versions"
-msgstr "Gestion des Versions"
+msgstr "Gestion des versions"
 
 #: trac/admin/templates/admin_versions.html:19
 msgid "Modify Version:"
-msgstr "Modification d'une Version :"
+msgstr "Modification d'une version :"
 
 #: trac/admin/templates/admin_versions.html:26
 msgid "Date:"
@@ -689,7 +690,7 @@ msgstr "Date :"
 
 #: trac/admin/templates/admin_versions.html:54
 msgid "Add Version:"
-msgstr "Ajout d'une Version :"
+msgstr "Ajout d'une version :"
 
 #: trac/admin/templates/admin_versions.html:59
 msgid "Released:"
@@ -702,37 +703,37 @@ msgstr "Livrée"
 #: trac/db/api.py:98
 #, python-format
 msgid "Unsupported database type \"%(scheme)s\""
-msgstr ""
+msgstr "Type de base de données \"%(scheme)s\" non supporté"
 
 #: trac/db/api.py:121
 msgid "Database connection string must start with scheme:/"
-msgstr ""
+msgstr "La chaîne de caractères utilisée pour définir la connection à la base de données doit commencer par \"type:/\""
 
 #: trac/db/mysql_backend.py:149
 msgid "MySQL servers older than 4.1 are not supported!"
-msgstr ""
+msgstr "Les serveurs MySQL antérieurs à la version 4.1 ne sont pas supportés (et les plus récents sont à peine tolérés...)"
 
 #: trac/db/pool.py:108
 #, python-format
 msgid "Unable to get database connection within %(time)d seconds"
-msgstr ""
+msgstr "Impossible d'obtenir une connection à la base de donnée au bout de %(time)d secondes"
 
 #: trac/db/sqlite_backend.py:132
 #, python-format
 msgid "Database already exists at %(path)s"
-msgstr ""
+msgstr "Base de données déjà existante au chemin %(path)s"
 
 #: trac/db/sqlite_backend.py:160
-#, fuzzy, python-format
+#, python-format
 msgid "Database \"%(path)s\" not found."
-msgstr ""
+msgstr "Base de données %(path)s inexistante"
 
 #: trac/db/sqlite_backend.py:169
 #, python-format
 msgid ""
 "The user %(user)s requires read _and_ write permission to the database "
 "file %(path)s and the directory it is located in."
-msgstr ""
+msgstr "L'utilisateur %(user)s à besoin de la permission de lire et d'écrire dans la base de données %(path)s et dans le répértoire où elle se situe."
 
 #: trac/mimeview/api.py:553 trac/mimeview/api.py:563
 #, python-format
@@ -741,7 +742,7 @@ msgstr "Pas de conversion MIME disponible de %(old)s à %(new)s"
 
 #: trac/mimeview/patch.py:55
 msgid "Invalid unified diff content"
-msgstr "Différences invalides"
+msgstr "Le contenu n'est pas conforme au format \"unified diff\""
 
 #: trac/mimeview/php.py:98
 msgid ""
@@ -749,7 +750,7 @@ msgid ""
 "for syntax highlighting."
 msgstr ""
 "Vous utilisez apparemment le binaire PHP CGI. Trac a besoin de la version"
-" en ligne de commande pour la coloration syntaxique."
+" en ligne de commande (CLI) pour la coloration syntaxique."
 
 #: trac/mimeview/rst.py:60
 msgid "Docutils not found"
@@ -766,7 +767,7 @@ msgstr "Préférences"
 
 #: trac/prefs/web_ui.py:77
 msgid "Unknown preference panel"
-msgstr "Panneau de préférence inconnu"
+msgstr "Page de préférence inconnu"
 
 #: trac/prefs/web_ui.py:90 trac/prefs/templates/prefs_datetime.html:9
 msgid "Date & Time"
@@ -779,7 +780,7 @@ msgstr "Raccourcis Clavier"
 #: trac/prefs/web_ui.py:93 trac/prefs/templates/prefs_language.html:9
 #, fuzzy
 msgid "Language"
-msgstr "Gestions des"
+msgstr "Langues"
 
 #: trac/prefs/web_ui.py:95 trac/prefs/templates/prefs_advanced.html:9
 msgid "Advanced"
@@ -801,7 +802,7 @@ msgstr ""
 "Cette page permet de personnaliser les réglages utilisateur pour ce site."
 "\n"
 "      Ces réglages sont stockés sur le serveur et identifiés par une clef"
-" desession\n"
+" de session\n"
 "      associée à un \"cookie\" du navigateur. Ce \"cookie\" permet de  "
 "restaurer les réglages lors des visites ultérieures"
 
@@ -844,7 +845,7 @@ msgid ""
 "between\n"
 "      multiple computers and web browsers."
 msgstr ""
-"Il est possible de recharger une session précédemment créée en fournissan"
+"Il est possible de recharger une session précédemment créée en fournissant"
 "      la clef de session correspondante dans le champ suivant.\n"
 "Cette fonctionnalité permet de conserver les même réglages sur de "
 "multiples      machines et/ou navigateurs web."
@@ -899,13 +900,12 @@ msgstr ""
 "\"Greenwich (GMT)."
 
 #: trac/prefs/templates/prefs_datetime.html:36
-#, fuzzy
 msgid ""
 "A positive offset is used to indicate a timezone at the east of "
 "Greenwich, i.e. ahead of Universal Time."
 msgstr ""
 "Un décalage positif est utilisé pour indiquer un fuseau horaire situé à "
-"l'Est de Greenwhich, c.à.d. en avance sur l'Heure Universelle."
+"l'Est de Greenwich, c.à.d. en avance sur l'Heure Universelle."
 
 #: trac/prefs/templates/prefs_general.html:15
 msgid "Full name:"
@@ -961,16 +961,16 @@ msgid "for more information on access keys."
 msgstr "pour de plus amples information sur les raccourcis clavier."
 
 #: trac/prefs/templates/prefs_language.html:14
-#, fuzzy
+#, 
 msgid "Language:"
-msgstr "Gestions des"
+msgstr "Langues"
 
 #: trac/prefs/templates/prefs_language.html:16
 msgid "Default language"
-msgstr ""
+msgstr "Langue par défaut (anglais)"
 
 #: trac/prefs/templates/prefs_language.html:21
-#, fuzzy
+#, 
 msgid ""
 "Configuring your language will result in all text\n"
 "      displayed on this site to use your language instead of that of the\n"
@@ -983,12 +983,12 @@ msgstr ""
 "      que celle du serveur."
 
 #: trac/prefs/templates/prefs_language.html:25
-#, fuzzy
+#, 
 msgid "Example:"
-msgstr "Nom:"
+msgstr "Exemple :"
 
 #: trac/prefs/templates/prefs_language.html:28
-#, fuzzy
+#, 
 msgid "language, this would be displayed as"
 msgstr ", le temps serait affiché comme ceci"
 
@@ -1027,7 +1027,7 @@ msgstr ""
 
 #: trac/search/web_ui.py:102
 msgid "Search Error"
-msgstr "Erreur de recherche"
+msgstr "Erreur survenue lors de la recherche"
 
 #: trac/search/web_ui.py:137 trac/ticket/query.py:657 trac/ticket/report.py:318
 msgid "Next Page"
@@ -1059,7 +1059,7 @@ msgstr "Par"
 #: trac/search/templates/search.html:65
 #: trac/ticket/templates/report_view.html:166
 msgid "No matches found."
-msgstr "Aucune correspondance trouvée."
+msgstr "Aucun résultat trouvé."
 
 #: trac/search/templates/search.html:70
 #: trac/ticket/templates/milestone_delete.html:38
@@ -1104,8 +1104,7 @@ msgstr "pour de l'aide sur la recherche"
 #: trac/templates/about.html:23
 msgid "Trac: Integrated SCM & Project Management"
 msgstr ""
-"Trac: Gestion de controle de source intégré et \"\n"
-"\"       gestion de projet logiciel"
+"Trac: Gestion de controle de source et de project logiciel intégré"
 
 #: trac/templates/about.html:27
 msgid ""
@@ -1118,14 +1117,14 @@ msgid ""
 msgstr ""
 "Trac est un système de gestion de projet logiciel et de suivi de\n"
 "défauts/incidents via le Web, qui met l'accent sur la facilité\n"
-"d'utilisation et évite les chichis. Il propose une interface pour le\n"
+"d'utilisation et n'impose qu'un minimum de protocole. Il propose une interface pour le\n"
 "système de contrôle de source, un Wiki intégré, et un nombre intéressant\n"
-"d'options permettant de rester au courant des évènements et changements\n"
-"intervenant sur un projet logiciel."
+"d'options permettant d'être tenu informé des évènements et changements\n"
+"survenant dans le cadre d'un projet logiciel."
 
 #: trac/templates/about.html:33
 msgid "Trac is distributed under the modified BSD License."
-msgstr "Trac est distribué sous une licence BSD modifiée."
+msgstr "Trac est distribué selons les termes de la licence BSD modifiée."
 
 #: trac/templates/about.html:33
 msgid "The complete text of the license can be found"
@@ -1153,7 +1152,7 @@ msgstr "animé par Python"
 
 #: trac/templates/about.html:41
 msgid "Please visit the Trac open source project:"
-msgstr "Merci de consulter le site open source du projet Trac:"
+msgstr "Merci de consulter le site open source du projet Trac :"
 
 #: trac/templates/about.html:42
 msgid "http://trac.edgewall.org/"
@@ -1161,7 +1160,7 @@ msgstr "http://trac.edgewall.org/"
 
 #: trac/templates/about.html:51
 msgid "System Information"
-msgstr "Information Système"
+msgstr "Informations Système"
 
 #: trac/templates/about.html:65
 msgid "Section"
@@ -1374,7 +1373,7 @@ msgstr ""
 #: trac/templates/error.html:84
 #, fuzzy
 msgid "Create"
-msgstr "Crée"
+msgstr "Créer"
 
 #: trac/templates/error.html:99
 msgid "Oops…"
@@ -1455,7 +1454,7 @@ msgstr ""
 
 #: trac/templates/error.html:136
 msgid "Otherwise, please"
-msgstr "Sinon, merci"
+msgstr "Sinon, merci de bien vouloir"
 
 #: trac/templates/error.html:136
 msgid ""
@@ -1619,9 +1618,8 @@ msgstr "Changements d'espacement"
 #: trac/ticket/templates/query.html:183 trac/ticket/templates/roadmap.html:26
 #: trac/timeline/templates/timeline.html:30
 #: trac/versioncontrol/templates/revisionlog.html:64
-#, fuzzy
 msgid "Update"
-msgstr "en retard"
+msgstr "Mise à jour"
 
 #: trac/templates/macros.html:139 trac/templates/macros.html:152
 msgid "HTML preview not available"
@@ -1823,7 +1821,7 @@ msgstr "Le prochain status sera '%(name)s'"
 
 #: trac/ticket/model.py:128
 msgid "Multi-values fields not supported yet"
-msgstr ""
+msgstr "Champs à valeurs multiples non supportés"
 
 #: trac/ticket/model.py:363
 #, fuzzy, python-format
@@ -2048,11 +2046,11 @@ msgstr "L'id d'un nouveau ticket ne peut être changé."
 
 #: trac/ticket/web_ui.py:203
 msgid "Ticket changes"
-msgstr "Modifications du ticket"
+msgstr "Changements d'états du ticket"
 
 #: trac/ticket/web_ui.py:205
 msgid "Ticket details"
-msgstr "Détails du Ticket"
+msgstr "Toutes modifications des tickets"
 
 #: trac/ticket/web_ui.py:211
 #, fuzzy
@@ -2262,7 +2260,7 @@ msgstr "Mettre à jour les tickets ouverts associés au jalon"
 #: trac/wiki/templates/wiki_edit.html:131
 #, fuzzy
 msgid "Submit changes"
-msgstr "Modifications du ticket"
+msgstr "Enregistrer"
 
 #: trac/ticket/templates/milestone_edit.html:90
 #, fuzzy
@@ -2309,7 +2307,7 @@ msgstr "Pas de date définie"
 
 #: trac/ticket/templates/milestone_view.html:47
 #: trac/timeline/templates/timeline.html:42
-msgid "by"
+msgid "by "
 msgstr "par"
 
 #: trac/ticket/templates/milestone_view.html:58
@@ -2811,9 +2809,9 @@ msgid ""
 "Diff mismatch: Base is a %(oldnode)s (%(oldpath)s in revision %(oldrev)s)"
 " and Target is a %(newnode)s (%(newpath)s in revision %(newrev)s)."
 msgstr ""
-"Discordance du diff : La Base est %(oldnode)s (%(oldpath)s dans la "
-"révision %(oldrev)s) et la Destination est %(newnode)s (%(newpath)s dans "
-"la révision %(newrev)s)."
+"Discordance de comparaison : La Base est %(oldnode)s (%(oldpath)s dans la"
+" révision %(oldrev)s) et la Destination est %(newnode)s (%(newpath)s dans"
+" la révision %(newrev)s)."
 
 #: trac/versioncontrol/svn_fs.py:803
 #, fuzzy, python-format
@@ -2831,7 +2829,7 @@ msgstr "Explorer :"
 #: trac/versioncontrol/templates/browser.html:63
 #, fuzzy
 msgid "Go!"
-msgstr "avant"
+msgstr "Changer"
 
 #: trac/versioncontrol/templates/browser.html:63
 msgid "Jump to the chosen preselected path"
@@ -2841,7 +2839,7 @@ msgstr "Saut direct au chemin préselectionné"
 #: trac/versioncontrol/templates/revisionlog.html:92
 #: trac/versioncontrol/web_ui/browser.py:622
 msgid "Rev"
-msgstr "Rév"
+msgstr "Rév."
 
 #: trac/versioncontrol/templates/browser.html:84
 #: trac/versioncontrol/web_ui/browser.py:373 trac/wiki/web_ui.py:520
@@ -3194,7 +3192,7 @@ msgstr "Afficher les %(range)s différences restreintes à %(path)s"
 
 #: trac/versioncontrol/web_ui/changeset.py:767
 msgid "Repository checkins"
-msgstr "Modification du dépôt"
+msgstr "Révisions du dépôt"
 
 #: trac/versioncontrol/web_ui/changeset.py:939
 msgid "Changesets"
@@ -3233,21 +3231,21 @@ msgstr "Révisions antérieures"
 #: trac/web/auth.py:89
 #, python-format
 msgid "logged in as %(user)s"
-msgstr ""
+msgstr "Connecté en tant qu'utilisateur %(user)s"
 
 #: trac/web/auth.py:92
-#, fuzzy
+#, 
 msgid "Logout"
-msgstr "journal"
+msgstr "Déconnexion"
 
 #: trac/web/auth.py:95
-#, fuzzy
+#, 
 msgid "Login"
-msgstr "journal"
+msgstr "Connexion"
 
 #: trac/web/auth.py:137
 #, python-format
-msgid "Already logged in as %(user)s."
+msgid "Déjà connecté en tant qu'utilisateur %(user)s."
 msgstr ""
 
 #: trac/web/chrome.py:160 trac/web/chrome.py:168
