Initial proof-of-concept of new documentation.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@7073 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/doc/README
+++ b/doc/README
@@ -1,2 +1,1 @@
-Sorry, for now the only documentation we have is what's on the project website:
-http://trac.edgewall.org/
+New documentation coming soon.
